--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
-project(bloombee LANGUAGES CXX)
+project(register LANGUAGES CXX)
 
-set(BINARY_NAME "bloombee")
+set(BINARY_NAME "register")
 
 cmake_policy(SET CMP0063 NEW)
 
